update d3.html deaths

--- a/Dpshow/d3.html
+++ b/Dpshow/d3.html
@@ -204,8 +204,8 @@ td:last-child {
             { text: "直暴击", width: "2.3%", align: "center" },
             { text: "", width: "0.4%", align: "center" },
             { text: "最强伤害", width: "8%", align: "left" },
-            //{ text: "", width: "0.8%", align: "center" },
-            //{ text: "自定义B", width: "4%", align: "center" },
+            { text: "", width: "0.8%", align: "center" },
+            { text: "放生", width: "4%", align: "center" },
             //{ text: "", width: "0.8%", align: "center" },
 		];
 
@@ -226,8 +226,8 @@ td:last-child {
             { text: "{CritDirectHitPct}", width: "2.3%", align: "center" },
             { text: "", width: "0.4%", align: "center" },
             { text: "{maxhit}", width: "8%", align: "left" },
-            //{ text: "", width: "0.8%", align: "center" },           
-            //{ text: "{自定义参数B}", width: "4%", align: "center" },
+            { text: "", width: "0.8%", align: "center" },           
+            { text: "{deaths}", width: "4%", align: "center" },
             //{ text: "", width: "0.8%", align: "center" },
 		];
 
