--- a/Dpshow/d3.html
+++ b/Dpshow/d3.html
@@ -193,16 +193,20 @@ td:last-child {
 	          { text: "职", width: "1.3%", align: "center" }, 
             { text: "", width: "0.4%", align: "center" },            
             { text: "名", width: "5%", align: "left" },                      
-            { text: "秒伤", width: "5%", align: "right" },
-            { text: "", width: "0.2%", align: "center" },                 
+            { text: "秒伤", width: "3%", align: "right" },
+            { text: "", width: "0.2%", align: "center" }, 
+            { text: "秒疗", width: "4%", align: "right" },
+            { text: "", width: "0.2%", align: "center" },                      
             { text: "伤害% ", width: "2.3%", align: "center" },
-            { text: "", width: "0.2%", align: "center" },
-	          { text: "直击", width: "2.1%", align: "center" },
-            { text: "", width: "0.1%", align: "center" },
-            { text: "暴击", width: "2.3%", align: "center"},
-            { text: "", width: "0.2%", align: "center" },            
-            { text: "直暴击", width: "2.3%", align: "center" },
-            { text: "", width: "0.4%", align: "center" },
+            { text: "", width: "0.2%", align: "center" },                      
+            { text: "过量治疗% ", width: "2.3%", align: "center" },
+           //  { text: "", width: "0.2%", align: "center" },
+	          // { text: "直击", width: "2.1%", align: "center" },
+           //  { text: "", width: "0.1%", align: "center" },
+           //  { text: "暴击", width: "2.3%", align: "center"},
+           //  { text: "", width: "0.2%", align: "center" },            
+           //  { text: "直暴击", width: "2.3%", align: "center" },
+            { text: "", width: "2%", align: "center" },
             { text: "最强伤害", width: "8%", align: "left" },
             { text: "", width: "0.8%", align: "center" },
             { text: "放生", width: "4%", align: "center" },
@@ -215,16 +219,20 @@ td:last-child {
             { html: "<img src='./icons/_{JobOrName}.png' onerror='$(this).attr(\"src\", \"./icons/_error.png\");' style='width:20px;height:20px;' />", align: "center",                      effect: jobColorEffect },
            { text: "", width: "0.4%", align: "center" },     
             { text: "{name}", width: "5%",align: "left",effect: myCharacterEffect, },  
-            { text: "{ENCDPS}", width: "5%", align: "right" },
+            { text: "{encdps}", width: "3%", align: "right" },
+            { text: "", width: "0.2%", align: "center" },
+            { text: "{enchps}", width: "4%", align: "right" },
             { text: "", width: "0.2%", align: "center" },             
             { text: "{damage%}", width: "2.3%", align: "center" },
-            { text: "", width: "0.2%", align: "center" },
-	          { text: "{DirectHitPct}", width: "2.3%", align: "center" },  //,effect: redTextEffect  红色字体
-            { text: "", width: "0.1%", align: "center" },
-            { text: "{crithit%}", width: "2.3%", align: "center" },
-            { text: "", width: "0.2%", align: "center" },
-            { text: "{CritDirectHitPct}", width: "2.3%", align: "center" },
-            { text: "", width: "0.4%", align: "center" },
+            { text: "", width: "0.2%", align: "center" },             
+            { text: "{OverHealPct}", width: "2.3%", align: "center" },
+         //    { text: "", width: "0.2%", align: "center" },
+	        // { text: "{DirectHitPct}", width: "2.3%", align: "center" },  //,effect: redTextEffect  红色字体
+         //    { text: "", width: "0.1%", align: "center" },
+         //    { text: "{crithit%}", width: "2.3%", align: "center" },
+         //    { text: "", width: "0.2%", align: "center" },
+         //    { text: "{CritDirectHitPct}", width: "2.3%", align: "center" },
+            { text: "", width: "2%", align: "center" },
             { text: "{maxhit}", width: "8%", align: "left" },
             { text: "", width: "0.8%", align: "center" },           
             { text: "{deaths}", width: "4%", align: "center" },
