--- a/Dpshow/d3.html
+++ b/Dpshow/d3.html
@@ -111,7 +111,8 @@
 		#combatantTableBody .Cnj td,
 		#combatantTableBody .Whm td,
 		#combatantTableBody .Sch td,
-		#combatantTableBody .Ast td {
+		#combatantTableBody .Ast td,
+		#combatantTableBody .Sge td {
 
 			color: #ffffff;
 			background-color: rgba(107, 240, 86, 0.2);
@@ -134,7 +135,8 @@
 		#combatantTableBody .Sam td,
 		#combatantTableBody .Dnc td,
 		#combatantTableBody .BLU td,
-		#combatantTableBody .Mch td {
+		#combatantTableBody .Mch td,
+		#combatantTableBody .Rpr td {
 			color: #ffffff;
 			background-color: rgba(200, 3, 8, 0.2);
 			background-blend-mode: soft-light;
@@ -266,8 +268,8 @@
 
 		function dpsBarEffect(cell, combatant, index) {
 			var tank = ["Gla", "Pld", "Mrd", "War", "Drk", "Gnb"]
-			var dps = ["Pgl", "Mnk", "Lnc", "Drg", "Arc", "Brd", "Rog", "Nin", "Acn", "Smn", "Thm", "Blm", "Rdm", "Sam", "Mch", "Dnc"]
-			var healer = ["Cnj", "Whm", "Sch", "Ast"]
+			var dps = ["Pgl", "Mnk", "Lnc", "Drg", "Arc", "Brd", "Rog", "Nin", "Acn", "Smn", "Thm", "Blm", "Rdm", "Sam", "Mch", "Dnc", "Rpr"]
+			var healer = ["Cnj", "Whm", "Sch", "Ast", "Sge"]
 
 			if (index == 0 || typeof dpsBarEffect.topdeeps == 'undefined') {
 				dpsBarEffect.topdeeps = combatant["encdps"];
