--- a/Dpshow/d3.html
+++ b/Dpshow/d3.html
@@ -136,7 +136,9 @@
 		#combatantTableBody .Dnc td,
 		#combatantTableBody .BLU td,
 		#combatantTableBody .Mch td,
-		#combatantTableBody .Rpr td {
+		#combatantTableBody .Rpr td,
+		#combatantTableBody .Vpr td,
+		#combatantTableBody .Pct td {
 			color: #ffffff;
 			background-color: rgba(200, 3, 8, 0.2);
 			background-blend-mode: soft-light;
@@ -268,7 +270,7 @@
 
 		function dpsBarEffect(cell, combatant, index) {
 			var tank = ["Gla", "Pld", "Mrd", "War", "Drk", "Gnb"]
-			var dps = ["Pgl", "Mnk", "Lnc", "Drg", "Arc", "Brd", "Rog", "Nin", "Acn", "Smn", "Thm", "Blm", "Rdm", "Sam", "Mch", "Dnc", "Rpr"]
+			var dps = ["Pgl", "Mnk", "Lnc", "Drg", "Arc", "Brd", "Rog", "Nin", "Acn", "Smn", "Thm", "Blm", "Rdm", "Sam", "Mch", "Dnc", "Rpr", "Vpr", "Pct"]
 			var healer = ["Cnj", "Whm", "Sch", "Ast", "Sge"]
 
 			if (index == 0 || typeof dpsBarEffect.topdeeps == 'undefined') {
